--- a/test/fixtures/shipment_vehicles.yml
+++ b/test/fixtures/shipment_vehicles.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  city: MyString
-  state: MyString
+  type: 
+  body: MyString
+  shipment: one
 
 two:
-  city: MyString
-  state: MyString
+  type: 
+  body: MyString
+  shipment: two
